--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Software Development & Marketing - Mup Web Design</title>
 
 
-  <base href="/">
+  <base href="/mupgh">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="fav.ico">
